# quadriga-lib

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.ubuntu  Dockerfile.ubuntu2404  GNUmakefile  Makefile  README.md  README_pip.md  README_win.md  bla.md  calc_diffraction_gain_old.cpp  hdf_python.hdf5  new_file.h5  pyproject.toml  test.hdf5  test_bin  test_ieee.m  version.tmp
+quadriga_lib/: arrayant_calc_directivity.m  arrayant_calc_directivity.mex  arrayant_calc_directivity.mexa64  arrayant_calc_directivity.mexw64  arrayant_combine_pattern.m  arrayant_combine_pattern.mex  arrayant_combine_pattern.mexa64  arrayant_combine_pattern.mexw64  arrayant_generate.m  arrayant_generate.mex  arrayant_generate.mexa64  arrayant_generate.mexw64  arrayant_interpolate.m  arrayant_interpolate.mex  arrayant_interpolate.mexa64  arrayant_interpolate.mexw64  arrayant_qdant_read.m  arrayant_qdant_read.mex  arrayant_qdant_read.mexa64  arrayant_qdant_read.mexw64  arrayant_qdant_write.m  arrayant_qdant_write.mex  arrayant_qdant_write.mexa64  arrayant_qdant_write.mexw64  arrayant_rotate_pattern.m  arrayant_rotate_pattern.mex  arrayant_rotate_pattern.mexa64  arrayant_rotate_pattern.mexw64  calc_rotation_matrix.exp  calc_rotation_matrix.lib  calc_rotation_matrix.m  calc_rotation_matrix.mex  calc_rotation_matrix.mexa64  calc_rotation_matrix.mexw64  cart2geo.m  cart2geo.mex  cart2geo.mexa64  cart2geo.mexw64  generate_diffraction_paths.m  geo2cart.m  (+57 more)
.github/: FUNDING.yml
api_mex/: acdf.cpp  arrayant_calc_beamwidth.cpp  arrayant_calc_directivity.cpp  arrayant_combine_pattern.cpp  arrayant_concat.cpp  arrayant_copy_element.cpp  arrayant_export_obj_file.cpp  arrayant_generate.cpp  arrayant_interpolate.cpp  arrayant_qdant_read.cpp  arrayant_qdant_write.cpp  arrayant_rotate_pattern.cpp  baseband_freq_response.cpp  calc_angular_spread.cpp  calc_angular_spreads_sphere.cpp  calc_cross_polarization_ratio.cpp  calc_delay_spread.cpp  calc_diffraction_gain.cpp  calc_rician_k_factor.cpp  calc_rotation_matrix.cpp  cart2geo.cpp  channel_export_obj_file.cpp  fast_sincos.cpp  generate_arrayant.cpp  generate_diffraction_paths.cpp  generate_speaker.cpp  geo2cart.cpp  get_channels_ieee_indoor.cpp  get_channels_irs.cpp  get_channels_multifreq.cpp  get_channels_planar.cpp  get_channels_spherical.cpp  hdf5_create_file.cpp  hdf5_read_channel.cpp  hdf5_read_dset.cpp  hdf5_read_dset_names.cpp  hdf5_read_layout.cpp  hdf5_reshape_layout.cpp  hdf5_version.cpp  hdf5_write_channel.cpp  (+21 more)
api_python/: __init__.py  python_RTtools.cpp  python_arma_adapter.hpp  python_arrayant.cpp  python_channel.cpp  python_helpers.cpp  python_main.cpp  python_quadriga_adapter.hpp  python_tools.cpp  qpy_acdf.cpp  qpy_arrayant_calc_beamwidth.cpp  qpy_arrayant_calc_directivity.cpp  qpy_arrayant_combine_pattern.cpp  qpy_arrayant_concat.cpp  qpy_arrayant_copy_element.cpp  qpy_arrayant_export_obj_file.cpp  qpy_arrayant_generate.cpp  qpy_arrayant_interpolate.cpp  qpy_arrayant_qdant_read.cpp  qpy_arrayant_qdant_write.cpp  qpy_arrayant_rotate_pattern.cpp  qpy_arrayant_speaker.cpp  qpy_baseband_freq_response.cpp  qpy_calc_angular_spread.cpp  qpy_calc_angular_spreads_sphere.cpp  qpy_calc_cross_polarization_ratio.cpp  qpy_calc_delay_spread.cpp  qpy_calc_diffraction_gain.cpp  qpy_calc_rician_k_factor.cpp  qpy_cart2geo.cpp  qpy_channel_export_obj_file.cpp  qpy_components.cpp  qpy_generate_speaker.cpp  qpy_get_channels_ieee_indoor.cpp  qpy_get_channels_multifreq.cpp  qpy_get_channels_planar.cpp  qpy_get_channels_spherical.cpp  qpy_hdf5_create_file.cpp  qpy_hdf5_read_channel.cpp  qpy_hdf5_read_dset.cpp  (+22 more)
cpython/: python_helpers.cpp  python_main.cpp  qpy_arrayant_export_obj_file.cpp  qpy_arrayant_qdant_read.cpp  qpy_baseband_freq_response.cpp  qpy_cart2geo.cpp  qpy_hdf5_read_channel.cpp  qpy_hdf5_read_dset_names.cpp  qpy_hdf5_read_layout.cpp  qpy_hdf5_reshape_layout.cpp  qpy_hdf5_write_channel.cpp  qpy_hdf5_write_dset.cpp
data/: materials_rf.csv
debian/: changelog  control  copyright  postinst  postrm  prerm  quadriga-lib.lintian-overrides  rules  stamp-changelog.sh
html_docu/: contact.html  cpp_api.html  download.html  faq.html  formats.html  index.html  mex_api.html  publications.html  python_api.html  quadriga_lib_api_cpp.md  quadriga_lib_api_mex.md  quadriga_lib_api_python.md  quadriga_lib_material_model.md  style2.css
include/: quadriga_CUDA_tools.cuh  quadriga_arrayant.hpp  quadriga_channel.hpp  quadriga_lib.hpp  quadriga_math.hpp  quadriga_tools.hpp
md/: REFACTOR_PLAN_UNDEVIATED_SNELL.md  SPEC_MATLAB_API.md  SPEC_PYTHON_API.md  SPEC_UNDEVIATED_SNELL_CORRECTION.md  SPEC_UNDEVIATED_SNELL_CORRECTION_v2.md  acoustic_mapping_spec.md  acoustic_modes_concept.md  api_cpp.md  compress_documentation.md  debian-packaging.md  propmt_compress_documentation.md  propmt_matlab_api.md  qd_RPI-RTI_CUDA_collision_fix.md  qd_RPI_CUDA_plan.md  qd_RTI_CUDA_implementation_spec.md  ray_state_update_spec_v4.md  ray_state_update_test_spec_v1.md  ray_state_update_test_spec_v2.md
mex/: arrayant_calc_directivity.cpp  arrayant_combine_pattern.cpp  arrayant_generate.cpp  arrayant_interpolate.cpp  arrayant_qdant_read.cpp  arrayant_qdant_write.cpp  arrayant_rotate_pattern.cpp  baseband_freq_response.cpp  calc_diffraction_gain.cpp  calc_rotation_matrix.cpp  cart2geo.cpp  generate_diffraction_paths.cpp  geo2cart.cpp  get_channels_planar.cpp  get_channels_spherical.cpp  hdf5_create_file.cpp  hdf5_read_channel.cpp  hdf5_read_dset.cpp  hdf5_read_dset_names.cpp  hdf5_read_layout.cpp  hdf5_reshape_layout.cpp  hdf5_version.cpp  hdf5_write_channel.cpp  hdf5_write_dset.cpp  icosphere.cpp  interp.cpp  obj_file_read.cpp  point_cloud_segmentation.cpp  ray_mesh_interact.cpp  ray_triangle_intersect.cpp  subdivide_triangles.cpp  test_hdf5.cpp  triangle_mesh_aabb.cpp  triangle_mesh_segmentation.cpp  version.cpp
mex_cuda/: get_CUDA_compute_capability.cpp
references/: Polarization_Modeling.md  chat_gpt_prompt.txt
src/: any_type_id.cpp  avx_mathfun.h  baseband_freq_response.cpp  baseband_freq_response_avx2.cpp  baseband_freq_response_avx2.hpp  calc_diffraction_gain.cpp  calc_rotation_matrix.cpp  (+98 more)
(+260 files in other folders)
